Set up the base

--- a/management/src/main/resources/application.yaml
+++ b/management/src/main/resources/application.yaml
@@ -1,3 +1,20 @@
 spring:
   application:
     name: calcfit
+  datasource:
+      url: jdbc:postgresql://localhost:5432/calorie_db
+      username: postgres
+      password: Sumit8077315043
+
+  jpa:
+      hibernate:
+        ddl-auto: validate
+      show-sql: true
+      properties:
+        hibernate:
+          format_sql: true
+
+  flyway:
+      enabled: true
+      baseline-on-migrate: true
+
